[package]
name = "kong_cli"
version = "0.1.0"
authors = ["Abel <abel.zhou@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.*" }
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.6.1", features = ["full"] }
serde_json = "1.0.64"